NewArchive/cfd277617e00b2a44f732c31987c4229-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:2:29: error: 'data' was not declared in this scope
     auto func() -> decltype(data) {}
                             ^
main.cpp:2:29: error: 'data' was not declared in this scope
main.cpp: In function 'int main()':
main.cpp:10:7: error: 'struct test' has no member named 'func'
     t.func();
       ^
